--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^1.0.0
   get_it: ^7.2.0
   provider: ^6.0.1
+  pretty_dio_logger: ^1.1.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
