--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animations: ^2.0.2
+  badges: ^2.0.2
   cupertino_icons: ^1.0.2
   dio: ^4.0.4
   flutter:
@@ -35,8 +36,8 @@ dependencies:
   flutter_screenutil: ^5.0.2
   flutter_svg: ^1.0.0
   get_it: ^7.2.0
-  provider: ^6.0.1
   pretty_dio_logger: ^1.1.1
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
