--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get_it: ^7.2.0
   pretty_dio_logger: ^1.1.1
   provider: ^6.0.1
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
