--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -27,18 +27,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  animations: ^2.0.2
+  animations: ^2.0.3
   badges: ^2.0.2
   cupertino_icons: ^1.0.2
   dio: ^4.0.4
   flutter:
     sdk: flutter
-  flutter_screenutil: ^5.0.2
+  flutter_screenutil: ^5.4.0+1
   flutter_svg: ^1.0.0
   get_it: ^7.2.0
   pretty_dio_logger: ^1.1.1
   provider: ^6.0.1
-  youtube_player_flutter: ^8.0.0
+  youtube_player_flutter: ^8.1.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
